<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>TDDSampleApp</groupId>
    <artifactId>TDDSampleApp</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>apk</packaging>
    <name>TDD Sample</name>
    <description>TDD Sample App</description>

    <repositories>
        <repository>
            <id>oss-sonatype</id>
            <name>oss-sonatype</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencies>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.8.2</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>1.8.4</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.robolectric</groupId>
            <artifactId>robolectric</artifactId>
            <version>2.3-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>org.roboguice</groupId>
            <artifactId>roboguice</artifactId>
            <version>2.0</version>
        </dependency>

        <dependency>
            <groupId>android</groupId>
            <artifactId>android</artifactId>
            <version>4.3_r2</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.android.support</groupId>
            <artifactId>support-v4</artifactId>
            <version>19.0.0</version>
        </dependency>

        <dependency>
            <groupId>com.squareup</groupId>
            <artifactId>fest-android</artifactId>
            <version>1.0.1</version>
        </dependency>

        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <version>2.3</version>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.2.4</version>
        </dependency>

        <dependency>
            <groupId>com.xtreme.rest</groupId>
            <artifactId>xl-rest</artifactId>
            <version>2.0.4</version>
        </dependency>

        <dependency>
            <groupId>com.xtreme.threadingLib</groupId>
            <artifactId>xl-threading</artifactId>
            <version>1.1.1</version>
        </dependency>

        <dependency>
            <groupId>com.xtreme.network</groupId>
            <artifactId>xtreme-network</artifactId>
            <version>1.5</version>
        </dependency>

        <dependency>
            <groupId>com.google.android.gms</groupId>
            <artifactId>google-play-services</artifactId>
            <version>4</version>
            <type>apklib</type>
        </dependency>

        <dependency>
            <groupId>com.google.android.maps</groupId>
            <artifactId>maps</artifactId>
            <version>18_r3</version>
            <type>jar</type>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.jayway.maven.plugins.android.generation2</groupId>
                <artifactId>android-maven-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <sdk>
                        <!-- platform or api level (api level 4 = platform 1.6)-->
                        <platform>18</platform>
                    </sdk>
                    <undeployBeforeDeploy>true</undeployBeforeDeploy>
                    <release>false</release>
                </configuration>
                <extensions>true</extensions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <excludes>
                        <exclude>**/Test*.java</exclude>
                    </excludes>
                    <argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>emma</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>com.jayway.maven.plugins.android.generation2</groupId>
                        <artifactId>android-maven-plugin</artifactId>
                        <version>3.8.0</version>
                        <configuration>
                            <sdk>
                                <!-- platform or api level (api level 4 = platform 1.6)-->
                                <platform>18</platform>
                            </sdk>
                            <undeployBeforeDeploy>true</undeployBeforeDeploy>
                            <release>false</release>
                            <test>
                                <coverage>true</coverage>
                                <createReport>true</createReport>
                            </test>
                            <emma>
                                <enable>true</enable>
                                <classFolders>${project.basedir}/target/classes/</classFolders>
                                <outputMetaFile>${project.basedir}/target/emma/coverage.em
                                </outputMetaFile>
                            </emma>
                            <dex>
                                <noLocals>true</noLocals>
                                <!--  must be set for emma -->
                            </dex>
                        </configuration>
                        <extensions>true</extensions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>2.6</version>
                        <configuration>
                            <excludes>
                                <exclude>**/Test*.java</exclude>
                            </excludes>
                            <argLine>-Xmx1024m</argLine>
                            <systemPropertyVariables combine.children="append">
                                <emma.rt.control>false</emma.rt.control>
                            </systemPropertyVariables>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
